--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,25 @@
+@font-face {
+    font-family: 'Gastronomy-Regular';
+    src: url('/font/Gastronomy-Regular.ttf') format('truetype'); 
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'DaintyFusion';
+    src: url('/font/DaintyFusion.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 body {
     background-color: #f5dab7;
 }
 
 /* Navigation Styles */
 .navbar {
+    font-family: 'DaintyFusion';
+    font-size: 18px;
     padding: 15px 0;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     background-color: #fce8cf !important;
@@ -17,17 +33,17 @@ body {
 
 .navbar-nav .nav-link {
     font-weight: 700;
-    color: #333;
+    color: #913131;
     margin: 0 10px;
     transition: color 0.3s ease;
 }
 
 .navbar-nav .nav-link:hover {
-    color: #9e6f35;
+    color: #504522;
 }
 
 .navbar-nav .nav-link.active {
-    color: #9e6f35;
+    color: #504522;
 }
 
 /* Hero Section with Video Background */
@@ -96,9 +112,10 @@ section {
 }
 
 h2 {
+    font-family: 'Gastronomy-Regular';
+    font-size: 40px;
     color: #2c3e50;
     margin-bottom: 1.5rem;
-    font-weight: 600;
     position: relative;
     padding-bottom: 0.5rem;
     margin-left: 1rem;
@@ -109,9 +126,9 @@ h2::after {
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 50px;
+    width: 80px;
     height: 3px;
-    background: linear-gradient(to right, #3498db, #2980b9);
+    background: linear-gradient(to right, #694a24, #e0b27a);
 }
 
 .introduction-section p,
